fix direction on mobile screen

--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -16,3 +16,11 @@
   gap: 6.25rem;
   align-content: center;
 }
+
+@media(max-width: 720px) {
+  .container section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
